agrego filtros de examen por user id y curso
